# py-safeget

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_safeget/: __init__.py
tests/: test_safeget.py
