[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-safeget"
version = "0.1.0"
description = "Safely access nested dictionary keys without exceptions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["dict", "nested", "safe", "get", "dotpath", "accessor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-safeget"
Repository = "https://github.com/philiprehberger/py-safeget"
Issues = "https://github.com/philiprehberger/py-safeget/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_safeget"]
